updated terms and privacy

--- a/privacy.html
+++ b/privacy.html
@@ -75,36 +75,27 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="c6" id="h.kafk0lay6jaf"><span class="c7">Privacy Policy </span></h1>
-                    <p class="c0"><span class="c1"></span></p>
-                    <p class="c3"><span class="c1">Great to see you here! Thank you for taking the time read this - it
+                    <h1 id="h.kafk0lay6jaf"><span>Privacy Policy </span></h1>
+                    <p><span></span></p>
+                    <p><span>Great to see you here! Thank you for taking the time read this - it
                             is important.</span></p>
-                    <p class="c3"><span class="c1">In short: we collect only the information that we need to run this
+                    <p><span>In short: we collect only the information that we need to run this
                             site, we keep it secure, and we never share it with third parties.</span></p>
-                    <p class="c3"><span>We do not collect any cookies. It is great if you want to get in touch,
+                    <p><span>We do not collect any cookies. It is great if you want to get in touch,
                             otherwise we will leave you alone.</span></p>
-                    <p class="c3"><span>When you submit a form we ask you to submit your contact details via
-                        </span><span class="c4"><a class="c2" href="https://typeform.com/">G Suite</a></span><span
-                            class="c1">&nbsp;by
-                            Google, as all forms are in there. This allows us to track who submitted the form, and get
-                            back in touch with you, as we always collect the email. On top of that some forms may ask
-                            you for more details. In this case there will be a short description of why need it. We do
-                            not track access to this form but clearly we do collect what you submit via them!</span></p>
-                    <p class="c3"><span class="c1">We may also use your data to get in touch if we ever update this
-                            privacy policy, too, or for other similarly important communications, but we will never
-                            share your data with third parties. You can get in touch to ask us to delete you information
-                            at any time, too.</span></p>
-                    <p class="c3"><span>Last but not least, your data is stored in G Suite, which was selected as it is
-                        </span><span class="c4"><a class="c2"
-                                href="https://privacy.google.com/businesses/compliance">compliant with several data
-                                protection laws</a></span><span>&nbsp;(including the GDPR) and </span><span
-                            class="c4"><a class="c2"
-                                href="https://gsuite.google.co.uk/intl/en_uk/security">secure</a></span><span
-                            class="c1">, but if something happens on their system we cannot be liable for it, as they
-                            are entirely managed by Google (which are far more capable than the people running this
-                            site...)</span></p>
-                    <p class="c3"><span class="c1">This is it.</span></p>
-                    <p class="c0"><span class="c1"></span></p>
+                    <p><span>When you submit a form you do it via an embedded from <a href="https://typeform.com/">Typeform</a>
+                            which is <a href="https://www.typeform.com/help/a/security-privacy-standards-at-typeform-9350912237844/">compliant
+                            with several data protection laws</a> (this means that if something happens on their
+                            systems we cannot be liable for it, as they are entirely managed by them). We need this data to see who submitted
+                            the form, and get back in touch.</span></p>
+                    <p><span>We may use this data also for important communications. This does not include any marketing, but only changes like an update to this
+                                privacy policy.</span></p>
+                    <p><span>You can get in touch to ask us to delete you information at any time.</span></p>
+                    <p><span>We do not track access to this form but just their inputs.</span></p>                
+                    <p><strong>Important: We will never share your data with third parties.</strong></p>
+                    <p> </span></p>
+                    <p><span>This is it.</span></p>
+                    <p><span></span></p>
                 </div>
             </div>
         </div>
@@ -133,7 +124,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <span class="copyright">Copyright &copy; WFDF 2018</span>
+                    <span class="copyright">Copyright &copy; Fair Fig 2022</span>
                 </div>
                 <div class="col-md-6">
                     <ul class="list-inline quicklinks">
