--- a/terms.html
+++ b/terms.html
@@ -84,15 +84,13 @@
                     <p class="c0 c3"><span class="c1"></span></p>
                     <h2 class="c5" id="h.ktg0ro2aaihp"><span class="c6">Basic terms</span></h2>
                     <p class="c0"><span class="c1">You are responsible for behaving in a responsible and polite way at
-                            all times: always stay true to the Spirit Of The Game.</span></p>
-                    <p class="c0"><span class="c1">You are responsible for keeping your login and password safe, and not
-                            to share it with anyone.</span></p>
+                            all times.</span></p>
                     <p class="c0"><span class="c1">This System should not be used to share sensitive information unless
                             specifically requested for it, and even in that case you are to share it only via the
                             defined channels. (Sensitive information includes but it is not limited to bank account
                             numbers, credit card information, passwords, etc.)</span></p>
                     <p class="c0"><span class="c1">We are not responsible for issues with This System, as all its forms
-                            and documents are in G Suite which is fully managed by Google.</span></p>
+                            and documents are in Typeform which is fully managed by them.</span></p>
                     <p class="c0 c3"><span class="c1"></span></p>
                     <h2 class="c5" id="h.ygj1un452p7t"><span class="c6">General terms</span></h2>
                     <p class="c0"><span class="c1">We reserve the right to modify or terminate This System for any
@@ -132,7 +130,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <span class="copyright">Copyright &copy; WFDF 2018</span>
+                    <span class="copyright">Copyright &copy; Fair Fig 2022</span>
                 </div>
                 <div class="col-md-6">
                     <ul class="list-inline quicklinks">
