--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>Let's talk</h4>
+                  <h4>We talk</h4>
                   <h5 class="subheading">We reply in 1 business day</h5>
                 </div>
                 <div class="timeline-body">
@@ -126,10 +126,10 @@
               <div class="timeline-panel">
                 <div class="timeline-heading">
                   <h4>Define the solution</h4>
-                  <h5 class="subheading">You choose what fits you.</h5>
+                  <h5 class="subheading">You choose.</h5>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Let's discuss together some options. Their expected results but also costs and timeframes. You choose.</p>
+                  <p class="text-muted">Let's discuss together some options. Their expected results but also costs and timeframes. You choose what fits you.</p>
                 </div>
               </div>
             </li>
@@ -139,11 +139,11 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>Delivery</h4>
+                  <h4>We deliver</h4>
                   <h5 class="subheading">On time, on budget.</h5>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">We keep you informed every step of the way. No surprises!</p>
+                  <p class="text-muted">And we keep you informed every step of the way.</p>
                 </div>
               </div>
             </li>
@@ -184,9 +184,7 @@
             <div class="rl"></div>
           </div>
         </div>
-        <div class="container">
-          <div data-tf-widget="HN7fyViQ" data-tf-opacity="100" data-tf-iframe-props="title=Collect Contacts" data-tf-transitive-search-params style="width:100%;height:500px;"></div><script src="//embed.typeform.com/next/embed.js"></script>
-        </div>
+        <div data-tf-widget="HN7fyViQ" data-tf-opacity="100" data-tf-iframe-props="title=Contacts" data-tf-auto-focus style="width:100%;height:500px;"></div><script src="//embed.typeform.com/next/embed.js"></script>
       </div>
     </div>
   </div>
