--- a/privacy.html
+++ b/privacy.html
@@ -45,7 +45,7 @@
 
 
 
-<body id="page-top" class="homepage">
+<body id="page-top" class="utility-page">
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top navbar-shrink" id="mainNav">
         <div class="container">
             <a class="navbar-brand no-effect js-scroll-trigger" href="/"><img id="logo" src="/images/logo.png">Fair
@@ -110,9 +110,7 @@
                     </div>
                 </div>
                 <div class="container">
-                    <div data-tf-widget="HN7fyViQ" data-tf-opacity="100" data-tf-iframe-props="title=Collect Contacts"
-                        data-tf-transitive-search-params style="width:100%;height:500px;"></div>
-                    <script src="//embed.typeform.com/next/embed.js"></script>
+                    <div data-tf-widget="HN7fyViQ" data-tf-opacity="100" data-tf-iframe-props="title=Contacts" data-tf-auto-focus style="width:100%;height:500px;"></div><script src="//embed.typeform.com/next/embed.js"></script>
                 </div>
             </div>
         </div>
