updated footer position

--- a/privacy.html
+++ b/privacy.html
@@ -88,7 +88,7 @@
                             systems we cannot be liable for it, as they are entirely managed by them). We need this data to see who submitted
                             the form, and get back in touch.</span></p>
                     <p><span>We may use this data also for important communications. This does not include any marketing, but only changes like an update to this
-                                privacy policy.</span></p>
+                                privacy policy or the terms of use.</span></p>
                     <p><span>You can get in touch to ask us to delete you information at any time.</span></p>
                     <p><span>We do not track access to this form but just their inputs.</span></p>                
                     <p><strong>Important: We will never share your data with third parties.</strong></p>
