--- a/terms.html
+++ b/terms.html
@@ -88,7 +88,7 @@
                             specifically requested for it, and even in that case you are to share it only via the
                             defined channels. (Sensitive information includes but it is not limited to bank account
                             numbers, credit card information, passwords, etc.)</span></p>
-                    <p class="c0"><span class="c1">We are not responsible for issues with This System, as all all forms
+                    <p class="c0"><span class="c1">We are not responsible for issues with This System, as all its forms
                              are from Typeform, and not managed by us.</span></p>
                     <p class="c0 c3"><span class="c1"></span></p>
                     <h2 class="c5" id="h.ygj1un452p7t"><span class="c6">General terms</span></h2>
