--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>We talk</h4>
+                  <h4>We talk together</h4>
                   <h5 class="subheading">We reply in 1 business day</h5>
                 </div>
                 <div class="timeline-body">
@@ -125,11 +125,11 @@
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4>Define the solution</h4>
-                  <h5 class="subheading">You choose.</h5>
+                  <h4>We define the solution</h4>
+                  <h5 class="subheading">You choose</h5>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Let's discuss together some options. Their expected results but also costs and timeframes. You choose what fits you.</p>
+                  <p class="text-muted">Let's discuss together some options. Their expected results but also costs and timeframes. You choose what fits you best.</p>
                 </div>
               </div>
             </li>
@@ -143,7 +143,7 @@
                   <h5 class="subheading">On time, on budget.</h5>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">And we keep you informed every step of the way.</p>
+                  <p class="text-muted">And we keep you informed every step of the way. Your plans have changed? We are flexible.</p>
                 </div>
               </div>
             </li>
