fixed responsive button

--- a/index.html
+++ b/index.html
@@ -155,9 +155,12 @@
                     <i class="fa fa-child fa-stack-1x fa-inverse"></i>
                   </span>
                 </a>
-                <h4 class="service-heading"><a class="cta cta-ask cta-text" data-toggle="modal" href="#contactModal">Let's start!</a></h4>
               </div>
-
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4 class="service-heading"><a class="cta cta-ask cta-text" data-toggle="modal" href="#contactModal">Let's start!</a></h4>
+                </div>
+              </div>  
             </li>
           </ul>
         </div>
