added about page

--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <base target="_top">
     <meta charset="UTF-8">
@@ -37,7 +38,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
     <title>Fair Fig - Welcome!</title>
     <meta name="description" content="" />
-    <link rel="canonical" href="http://fairfig.com/privacy" />
+    <link rel="canonical" href="http://fairfig.com/about" />
     <script src="/js/main.js?v=1"></script>
     <link href="/css/main.css?v=1" rel="stylesheet">
 </head>
@@ -59,7 +60,7 @@
                 <ul class="navbar-nav text-uppercase ml-auto">
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="/about">About</a>
-                      </li> 
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" data-toggle="modal" href="#contactModal">Contact</a>
                     </li>
@@ -73,29 +74,46 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 id="h.kafk0lay6jaf"><span>Privacy Policy </span></h1>
-                    <p><span></span></p>
-                    <p><span>Great to see you here! Thank you for taking the time read this - it
-                            is important.</span></p>
-                    <p><span>In short: we collect only the information that we need to run this
-                            site, we keep it secure, and we never share it with third parties.</span></p>
-                    <p><span>We do not collect any cookies. It is great if you want to get in touch,
-                            otherwise we will leave you alone.</span></p>
-                    <p><span>When you submit a form you do it via an embedded from <a href="https://typeform.com/">Typeform</a>
-                            which is <a href="https://www.typeform.com/help/a/security-privacy-standards-at-typeform-9350912237844/">compliant
-                            with several data protection laws</a> (this means that if something happens on their
-                            systems we cannot be liable for it, as they are entirely managed by them). We need this data to see who submitted
-                            the form, and get back in touch.</span></p>
-                    <p><span>We may use this data also for important communications. This does not include any marketing, but only changes like an update to this
-                                privacy policy or the terms of use.</span></p>
-                    <p><span>You can get in touch to ask us to delete you information at any time.</span></p>
-                    <p><span>We do not track access to this form but just their inputs.</span></p>                
-                    <p><strong>Important: We will never share your data with third parties.</strong></p>
-                    <p> </span></p>
-                    <p><span>This is it.</span></p>
-                    <p><span></span></p>
+                    <h1><span>About us </span></h1>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="profile-picture"><img class="rounded-circle img-fluid" src="/images/Gabriele.jpg">
+                    </div>
+                    <h3 class="profile-name">
+                        Gabriele Sani
+                    </h3>
+                    <h5 class="profile-title">
+                        Founder
+                        <span class="social-buttons">
+                            <a href="https://www.linkedin.com/in/gabrielesani/" target="_blank"><i
+                                    class="fab fa-linkedin"></i></a>
+                            <a href="mailto:gabriele@fairfig.com" title="Email"><i class="fas fa-envelope"></i></a>
+                        </span>
+                    </h5>
+
+                </div>
+                <div class="col-md-6">
+                    <p><span>Fair Fig provides finely taylored support to our customers.</span></p>
+                    <p><span>We do not try to fit our technology of choice to all projects that we come across. It
+                            all starts with you.</span></p>
+                    <p><span>We listen to your your needs and targets, and then we research state-of-the-arts
+                            solutions that would fit you to present you some alternatives.</span></p>
+                    <p><span>You choose the one that works best for you, and then we assemble a team of experts in the
+                            technologies and tools needed to deliver it.</span></p>
+                    <p><span>We have chosen to work in this way since we want to keep your perspective first, but also
+                            because technology changes all the time.</span></p>
+                    <p><span>You will always have a single point of contact, while behind the scene we taylor the
+                            support based on your needs and budget.</span></p>
+                    <p><span>We can offer you from 24/7 support and development to low-cost
+                            alternatives, and quickly ramp up or freeze resources if your needs change over time.
+                            At every point, we guarantee that the team following you is made of true experts in the
+                            field.</span></p>
+                    <p><span>This is our promise. It is always professional, and personal.</span></p>
+                </div>
+            </div>
+        </div>
         </div>
     </section>
 
@@ -109,7 +127,9 @@
                     </div>
                 </div>
                 <div class="container">
-                    <div data-tf-widget="HN7fyViQ" data-tf-opacity="100" data-tf-iframe-props="title=Contacts" data-tf-auto-focus style="width:100%;height:500px;"></div><script src="//embed.typeform.com/next/embed.js"></script>
+                    <div data-tf-widget="HN7fyViQ" data-tf-opacity="100" data-tf-iframe-props="title=Contacts"
+                        data-tf-auto-focus style="width:100%;height:500px;"></div>
+                    <script src="//embed.typeform.com/next/embed.js"></script>
                 </div>
             </div>
         </div>
