--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png?v=9BP9r6mz5d">
-  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png?v=9BP9r6mz5d">
-  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png?v=9BP9r6mz5d">
-  <link rel="manifest" href="images/favicon/site.webmanifest?v=9BP9r6mz5d">
-  <link rel="mask-icon" href="images/favicon/safari-pinned-tab.svg?v=9BP9r6mz5d" color="#1a719f">
-  <link rel="shortcut icon" href="images/favicon/favicon.ico?v=9BP9r6mz5d">
+  <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png?v=9BP9r6mz5d">
+  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon/favicon-32x32.png?v=9BP9r6mz5d">
+  <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon/favicon-16x16.png?v=9BP9r6mz5d">
+  <link rel="manifest" href="/images/favicon/site.webmanifest?v=9BP9r6mz5d">
+  <link rel="mask-icon" href="/images/favicon/safari-pinned-tab.svg?v=9BP9r6mz5d" color="#1a719f">
+  <link rel="shortcut icon" href="/images/favicon/favicon.ico?v=9BP9r6mz5d">
   <meta name="msapplication-TileColor" content="#9f00a7">
   <meta name="theme-color" content="#ffffff">
 
@@ -31,15 +31,14 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css"
     integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-  <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet'
     type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
   <title>Fair Fig - Welcome!</title>
   <meta name="description" content="" />
   <link rel="canonical" href="http://fairfig.com" />
-  <script src="js/main.js?v=1"></script>
-  <link href="css/main.css?v=1" rel="stylesheet">
+  <script src="/js/main.js?v=1"></script>
+  <link href="/css/main.css?v=1" rel="stylesheet">
 </head>
 
 
@@ -47,7 +46,7 @@
 <body id="page-top" class="homepage">
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top navbar-shrink" id="mainNav">
     <div class="container">
-      <a class="navbar-brand no-effect js-scroll-trigger" href="#page-top"><img id="logo" src="images/logo.png">Fair Fig</a>
+      <a class="navbar-brand no-effect js-scroll-trigger" href="#page-top"><img id="logo" src="/images/logo.png">Fair Fig</a>
       <button class="navbar-toggler navbar-toggler-right collapsed" type="button" data-toggle="collapse"
         data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
         aria-label="Toggle navigation">
@@ -56,9 +55,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
-          <!-- <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/#project">Projects</a>
-          </li> -->
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="/about">About</a>
+          </li> 
           <li class="nav-item">
             <a class="nav-link" data-toggle="modal" href="#contactModal">Contact</a>
           </li>
@@ -74,13 +73,13 @@
       <div class="intro-text">
         <div class="intro-lead-in">Let's work together!</div>
         <div class="intro-heading text-uppercase">It's Nice To Meet You</div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">What?</a>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#how">What?</a>
       </div>
     </div>
   </header>
 
-  <!-- About -->
-  <section id="about">
+  <!-- How -->
+  <section id="how">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
@@ -93,7 +92,7 @@
           <ul class="timeline">
             <li>
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="images/about_1.jpg" alt="">
+                <img class="rounded-circle img-fluid" src="/images/about_1.jpg" alt="">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
@@ -107,7 +106,7 @@
             </li>
             <li class="timeline-inverted">
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="images/about_2.jpg" alt="">
+                <img class="rounded-circle img-fluid" src="/images/about_2.jpg" alt="">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
@@ -121,7 +120,7 @@
             </li>
             <li>
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="images/about_3.jpg" alt="">
+                <img class="rounded-circle img-fluid" src="/images/about_3.jpg" alt="">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
@@ -135,7 +134,7 @@
             </li>
             <li class="timeline-inverted">
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="images/about_4.jpg" alt="">
+                <img class="rounded-circle img-fluid" src="/images/about_4.jpg" alt="">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
@@ -149,18 +148,10 @@
             </li>
             <li class="timeline-inverted last">
               <div class="timeline-image">
-                <a class="cta cta-ask cta-button" data-toggle="modal" href="#contactModal">
-                  <span class="fa-stack fa-4x">
-                    <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                    <i class="fa fa-child fa-stack-1x fa-inverse"></i>
-                  </span>
+                <div class="arrow-down-right"></div>
+                <a data-toggle="modal" href="#contactModal" class="btn btn-secondary btn-xl text-uppercase js-scroll-trigger cta-button"> <span class="add-border">Let's talk</span>                
                 </a>
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h4 class="service-heading"><a class="cta cta-ask cta-text" data-toggle="modal" href="#contactModal">Let's start!</a></h4>
-                </div>
-              </div>  
+              </div> 
             </li>
           </ul>
         </div>
@@ -169,7 +160,7 @@
           <p class="text-muted mt80">
             Want to know more? 
           <br>
-            Write to <a href="mailto:hello@fairfig.com">hello@fairfig.com</a> or via <a href="https://www.linkedin.com/company/fairfig">LinkedIn</a>
+            Contact us at <a href="mailto:hello@fairfig.com">hello@fairfig.com</a> or via <a href="https://www.linkedin.com/company/fairfig">LinkedIn</a>
           </p>
         </div>
       </div>
@@ -203,10 +194,10 @@
         <div class="col-md-6">
           <ul class="list-inline quicklinks">
             <li class="list-inline-item">
-              <a href="privacy">Privacy Policy</a>
+              <a href="/privacy">Privacy Policy</a>
             </li>
             <li class="list-inline-item">
-              <a href="terms">Terms of Use</a>
+              <a href="/terms">Terms of Use</a>
             </li>
             <li class="list-inline-item">
               <a data-toggle="modal" href="#contactModal">Contact</a>
