--- a/terms.html
+++ b/terms.html
@@ -29,12 +29,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/w2ui/1.4.3/w2ui.min.js"></script>
 
     <!-- Custom fonts -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css"
-        integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet'
-        type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
     <title>Fair Fig - Welcome!</title>
     <meta name="description" content="" />
@@ -58,9 +55,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav text-uppercase ml-auto">
-                    <!-- <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/#project">Projects</a>
-          </li> -->
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="/about">About</a>
+                      </li> 
                     <li class="nav-item">
                         <a class="nav-link" data-toggle="modal" href="#contactModal">Contact</a>
                     </li>
@@ -132,10 +129,10 @@
                 <div class="col-md-6">
                     <ul class="list-inline quicklinks">
                         <li class="list-inline-item">
-                            <a href="/privacy-policy">Privacy Policy</a>
+                            <a href="/privacy">Privacy Policy</a>
                         </li>
                         <li class="list-inline-item">
-                            <a href="/terms-of-use">Terms of Use</a>
+                            <a href="/terms">Terms of Use</a>
                         </li>
                         <li class="list-inline-item">
                             <a data-toggle="modal" href="#contactModal">Contact</a>
