--- a/about.html
+++ b/about.html
@@ -99,17 +99,16 @@
                     <p><span>We do not try to fit our technology of choice to all projects that we come across. It
                             all starts with you.</span></p>
                     <p><span>We listen to your your needs and targets, and then we research state-of-the-arts
-                            solutions that would fit you to present you some alternatives.</span></p>
-                    <p><span>You choose the one that works best for you, and then we assemble a team of experts in the
+                            solutions that would fit you to present you some alternatives. You choose the one that works
+                            best for you, and then we assemble a team of experts in the
                             technologies and tools needed to deliver it.</span></p>
                     <p><span>We have chosen to work in this way since we want to keep your perspective first, but also
-                            because technology changes all the time.</span></p>
-                    <p><span>You will always have a single point of contact, while behind the scene we taylor the
-                            support based on your needs and budget.</span></p>
-                    <p><span>We can offer you from 24/7 support and development to low-cost
-                            alternatives, and quickly ramp up or freeze resources if your needs change over time.
-                            At every point, we guarantee that the team following you is made of true experts in the
+                            because technology changes all the time. With this approach, we can guarantee you that the team following you is made of true experts in the
                             field.</span></p>
+                    <p><span>This gives us greater flecibility, too. While you will always have a single point of contact, behind the scene we can taylor the
+                            support based on your needs and budget. From 24/7 support and development to low-cost
+                            alternatives, and the flexibility to quickly ramp up or freeze resources if your needs change over time.
+                            </span></p>
                     <p><span>This is our promise. It is always professional, and personal.</span></p>
                 </div>
             </div>
