--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 text-center">
                     <div class="profile-picture"><img class="rounded-circle img-fluid" src="/images/Gabriele.jpg">
                     </div>
                     <h3 class="profile-name">
@@ -86,12 +86,12 @@
                     </h3>
                     <h5 class="profile-title">
                         Founder
-                        <span class="social-buttons">
-                            <a href="https://www.linkedin.com/in/gabrielesani/" target="_blank"><i
-                                    class="fab fa-linkedin"></i></a>
-                            <a href="mailto:gabriele@fairfig.com" title="Email"><i class="fas fa-envelope"></i></a>
-                        </span>
                     </h5>
+                    <div class="social-buttons">
+                        <a href="https://www.linkedin.com/in/gabrielesani/" target="_blank"><i
+                                class="fab fa-linkedin"></i></a>
+                        <a href="mailto:gabriele@fairfig.com" title="Email"><i class="fas fa-envelope"></i></a>
+                    </div>
 
                 </div>
                 <div class="col-md-6">
@@ -103,12 +103,15 @@
                             best for you, and then we assemble a team of experts in the
                             technologies and tools needed to deliver it.</span></p>
                     <p><span>We have chosen to work in this way since we want to keep your perspective first, but also
-                            because technology changes all the time. With this approach, we can guarantee you that the team following you is made of true experts in the
+                            because technology changes all the time. With this approach, we can guarantee you that the
+                            team following you is made of true experts in the
                             field.</span></p>
-                    <p><span>This gives us greater flecibility, too. While you will always have a single point of contact, behind the scene we can taylor the
+                    <p><span>This gives us greater flecibility, too. While you will always have a single point of
+                            contact, behind the scene we can taylor the
                             support based on your needs and budget. From 24/7 support and development to low-cost
-                            alternatives, and the flexibility to quickly ramp up or freeze resources if your needs change over time.
-                            </span></p>
+                            alternatives, and the flexibility to quickly ramp up or freeze resources if your needs
+                            change over time.
+                        </span></p>
                     <p><span>This is our promise. It is always professional, and personal.</span></p>
                 </div>
             </div>
