--- a/index.html
+++ b/index.html
@@ -150,17 +150,16 @@
                 </div>
               </div>
             </li>
-            <li class="timeline-inverted last">
-              <div class="timeline-image">
-                <div class="arrow-down-right"></div>
-                <a data-toggle="modal" href="#contactModal"
-                  class="btn btn-secondary btn-xl text-uppercase js-scroll-trigger cta-button"> <span
-                    class="add-border">Get in touch</span>
-                </a>
-              </div>
-            </li>
           </ul>
         </div>
+
+        <div class="col-lg-12 text-center mt-4">
+          <p class="text-muted mt80">Interested?</p>
+            <a data-toggle="modal" href="#contactModal" class="btn btn-secondary btn-xl text-uppercase cta-button">
+              <span class="add-border">Get in touch</span>
+            </a>
+        </div>
+
 
         <div class="col-lg-12 text-center mt-4">
           <p class="text-muted mt80">
