cleaned up text

--- a/about.html
+++ b/about.html
@@ -95,24 +95,23 @@
 
                 </div>
                 <div class="col-md-6">
-                    <p><span>Fair Fig provides finely taylored support to our customers.</span></p>
-                    <p><span>We do not try to fit our technology of choice to all projects that we come across. It
+                    <p><span>Fair Fig provides finely tailored support to our customers.</span></p>
+                    <p><span>We do not try to fit our technologies of choice into all projects   we come across. It
                             all starts with you.</span></p>
-                    <p><span>We listen to your your needs and targets, and then we research state-of-the-arts
-                            solutions that would fit you to present you some alternatives. You choose the one that works
+                    <p><span>We listen to your needs and targets, we research state-of-the-art
+                            solutions that would fit your project, the we discuss with you some alternatives. You choose the one that works
                             best for you, and then we assemble a team of experts in the
                             technologies and tools needed to deliver it.</span></p>
                     <p><span>We have chosen to work in this way since we want to keep your perspective first, but also
                             because technology changes all the time. With this approach, we can guarantee you that the
                             team following you is made of true experts in the
-                            field.</span></p>
-                    <p><span>This gives us greater flecibility, too. While you will always have a single point of
-                            contact, behind the scene we can taylor the
-                            support based on your needs and budget. From 24/7 support and development to low-cost
-                            alternatives, and the flexibility to quickly ramp up or freeze resources if your needs
-                            change over time.
+                            field, every time.</span></p>
+                    <p><span>This gives us greater flexibility, too. While you will always have a single point of
+                            contact, behind the scene we can tailor the
+                            support based on your timeframe and budget. We can provide 24/7 support and development, or low-cost
+                            alternatives. We can also quickly ramp up or freeze resources if your needs change over time.
                         </span></p>
-                    <p><span>This is our promise. It is always professional, and personal.</span></p>
+                    <p><strong>This is our promise: always professional, and personal.</strong></p>
                 </div>
             </div>
         </div>
