--- a/privacy.html
+++ b/privacy.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <base target="_top">
     <meta charset="UTF-8">
@@ -58,7 +59,7 @@
                 <ul class="navbar-nav text-uppercase ml-auto">
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="/about">About</a>
-                      </li> 
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" data-toggle="modal" href="#contactModal">Contact</a>
                     </li>
@@ -74,21 +75,25 @@
                 <div class="col-lg-12">
                     <h1 id="h.kafk0lay6jaf"><span>Privacy Policy </span></h1>
                     <p><span></span></p>
-                    <p><span>Great to see you here! Thank you for taking the time read this - it
-                            is important.</span></p>
-                    <p><span>In short: we collect only the information that we need to run this
-                            site, we keep it secure, and we never share it with third parties.</span></p>
+                    <p><span>Great to see you here! Thank you for taking the time to read this - it
+                            is essential.</span></p>
+                    <p><span>In short, we collect only the information we need to run this site, keep it secure, and
+                            never share it with third parties.</span></p>
                     <p><span>We do not collect any cookies. It is great if you want to get in touch,
-                            otherwise we will leave you alone.</span></p>
-                    <p><span>When you submit a form you do it via an embedded from <a href="https://typeform.com/">Typeform</a>
-                            which is <a href="https://www.typeform.com/help/a/security-privacy-standards-at-typeform-9350912237844/">compliant
-                            with several data protection laws</a> (this means that if something happens on their
-                            systems we cannot be liable for it, as they are entirely managed by them). We need this data to see who submitted
-                            the form, and get back in touch.</span></p>
-                    <p><span>We may use this data also for important communications. This does not include any marketing, but only changes like an update to this
-                                privacy policy or the terms of use.</span></p>
-                    <p><span>You can get in touch to ask us to delete you information at any time.</span></p>
-                    <p><span>We do not track access to this form but just their inputs.</span></p>                
+                            otherwise, we will leave you alone.</span></p>
+                    <p><span>When you submit a form you do it via an embedded form built via <a
+                                href="https://typeform.com/">Typeform</a>.
+                            We selected this tool as it is <a
+                                href="https://www.typeform.com/help/a/security-privacy-standards-at-typeform-9350912237844/">compliant
+                                with several data protection laws</a> (this means that if something happens on their
+                            systems we cannot be liable for it, as they entirely manage them). We need this data to see
+                            who submitted the form and get back in touch. We do not track access to our forms but just
+                            their inputs. We collect only what you explicitly give us.</span></p>
+                    <p><span>We reserve the right use this data for important communications. This does not include any
+                            marketing activities, but only changes like an update to this
+                            privacy policy or to the terms of use.</span></p>
+                    <p><span>You can <a href="support@fairfig.com">write to us</a> to ask us to delete your information
+                            at any time.</span></p>
                     <p><strong>Important: We will never share your data with third parties.</strong></p>
                     <p> </span></p>
                     <p><span>This is it.</span></p>
@@ -108,7 +113,9 @@
                     </div>
                 </div>
                 <div class="container">
-                    <div data-tf-widget="HN7fyViQ" data-tf-opacity="100" data-tf-iframe-props="title=Contacts" data-tf-auto-focus style="width:100%;height:500px;"></div><script src="//embed.typeform.com/next/embed.js"></script>
+                    <div data-tf-widget="HN7fyViQ" data-tf-opacity="100" data-tf-iframe-props="title=Contacts"
+                        data-tf-auto-focus style="width:100%;height:500px;"></div>
+                    <script src="//embed.typeform.com/next/embed.js"></script>
                 </div>
             </div>
         </div>
@@ -139,7 +146,7 @@
     </footer>
 
     <!-- Custom scripts -->
-  <script src="/js/main.js?v=1"></script>
+    <script src="/js/main.js?v=1"></script>
 </body>
 
 </html>
