--- a/terms.html
+++ b/terms.html
@@ -81,8 +81,8 @@
                     <p class="c0"><span class="c1">You are responsible for behaving in a responsible and polite way at
                             all times.</span></p>
                     <p class="c0"><span class="c1">This System should not be used to share sensitive information unless
-                            specifically requested for it, and even in that case you are to share it only via the
-                            defined channels. (Sensitive information includes but it is not limited to bank account
+                            specifically requested for it, and even in that case, you are to share it only via the
+                            defined channels. (Sensitive information includes but is not limited to bank account
                             numbers, credit card information, passwords, etc.)</span></p>
                     <p class="c0"><span class="c1">We are not responsible for issues with This System, as all its forms
                              are from Typeform, and not managed by us.</span></p>
