--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
 <body id="page-top" class="utility-page">
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top navbar-shrink" id="mainNav">
         <div class="container">
-            <a class="navbar-brand no-effect js-scroll-trigger" href="/"><img id="logo" src="/images/logo.png">Fair
+            <a class="navbar-brand no-effect js-scroll-trigger" href="/"><img id="logo" alt="logo" src="/images/logo.png">Fair
                 Fig</a>
             <button class="navbar-toggler navbar-toggler-right collapsed" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
@@ -79,7 +79,7 @@
             </div>
             <div class="row">
                 <div class="col-md-6 text-center profile-wrapper">
-                    <div class="profile-picture"><img class="rounded-circle img-fluid" src="/images/Gabriele.jpg">
+                    <div class="profile-picture"><img alt="Picture of Gabriele Sani smiling" class="rounded-circle img-fluid" src="/images/Gabriele.jpg">
                     </div>
                     <h3 class="profile-name">
                         Gabriele Sani
