--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <body id="page-top" class="homepage">
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top navbar-shrink" id="mainNav">
     <div class="container">
-      <a class="navbar-brand no-effect js-scroll-trigger" href="#page-top"><img id="logo" src="/images/logo.png">Fair
+      <a class="navbar-brand no-effect js-scroll-trigger" href="#page-top"><img id="logo" alt="logo" src="/images/logo.png">Fair
         Fig</a>
       <button class="navbar-toggler navbar-toggler-right collapsed" type="button" data-toggle="collapse"
         data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
@@ -93,7 +93,7 @@
           <ul class="timeline">
             <li>
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="/images/about_1.jpg" alt="">
+                <img class="rounded-circle img-fluid" alt="" src="/images/about_1.jpg" alt="">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
@@ -108,7 +108,7 @@
             </li>
             <li class="timeline-inverted">
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="/images/about_2.jpg" alt="">
+                <img class="rounded-circle img-fluid" alt="" src="/images/about_2.jpg" alt="">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
@@ -122,7 +122,7 @@
             </li>
             <li>
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="/images/about_3.jpg" alt="">
+                <img class="rounded-circle img-fluid" alt="" src="/images/about_3.jpg" alt="">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
@@ -137,7 +137,7 @@
             </li>
             <li class="timeline-inverted">
               <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="/images/about_4.jpg" alt="">
+                <img class="rounded-circle img-fluid" alt="" src="/images/about_4.jpg" alt="">
               </div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
