--- a/privacy.html
+++ b/privacy.html
@@ -47,7 +47,7 @@
 <body id="page-top" class="utility-page">
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top navbar-shrink" id="mainNav">
         <div class="container">
-            <a class="navbar-brand no-effect js-scroll-trigger" href="/"><img id="logo" src="/images/logo.png">Fair
+            <a class="navbar-brand no-effect js-scroll-trigger" href="/"><img id="logo" alt="logo" src="/images/logo.png">Fair
                 Fig</a>
             <button class="navbar-toggler navbar-toggler-right collapsed" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
