--- a/terms.html
+++ b/terms.html
@@ -44,7 +44,7 @@
 <body id="page-top" class="utility-page">
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top navbar-shrink" id="mainNav">
         <div class="container">
-            <a class="navbar-brand no-effect js-scroll-trigger" href="/"><img id="logo" src="/images/logo.png">Fair
+            <a class="navbar-brand no-effect js-scroll-trigger" href="/"><img id="logo" alt="logo" src="/images/logo.png">Fair
                 Fig</a>
             <button class="navbar-toggler navbar-toggler-right collapsed" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
@@ -93,10 +93,8 @@
                     <p class="c0"><span class="c1">We reserve the right to alter these Terms of Use at any time. If
                             there are any changes to these Terms of Use, we will notify our users.</span></p>
                     <p class="c0"><span class="c1">We reserve the right to refuse service to anyone for any reason at
-                            any time (do not be naughty or we will tell Santa!)</span></p>
+                            any time.</span></p>
                     <p class="c0"><span class="c1">This is it.</span></p>
-                    <p class="c0 c3"><span class="c1"></span></p>
-                    <p class="c0 c3"><span class="c1"></span></p>
                 </div>
             </div>
         </div>
